[package]
name = "odatrek_game"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.27"
odatrek_logger = { version = "0.1.0", path = "logger" }
palette = "0.7.6"
pollster = "0.4.0"
wgpu = "24.0.3"
winit = "0.30.9"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
codegen-units = 12

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
codegen-units = 1
lto = "fat"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold", "-Zshare-generics=y"]
